# SampleCppApps

./: .gitignore  README.md
TCP_Client/: CMakeLists.txt  Makefile
TCP_Client/src/: main.cpp
TCP_Server/: CMakeLists.txt
TCP_Server/src/: main.cpp
toolchains/: arm-linux-gnueabi.cmake  arm-linux-gnueabihf.cmake  native.cmake  x86_64-linux-gnu.cmake
